--- a/fish_nf/android/src/main/res/layout/fln_beauty_notify_content.xml
+++ b/fish_nf/android/src/main/res/layout/fln_beauty_notify_content.xml
@@ -2,65 +2,53 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="58dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/fln_beauty_notify_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/fln_beauty_notify_app_icon"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        >
 
         <ImageView
-            android:id="@+id/fln_beauty_notify_app_icon"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            tools:ignore="ContentDescription" />
-
-        <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/fln_beauty_notify_image"
+            android:layout_width="68dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
+        <TextView
+            android:id="@+id/fln_beauty_notify_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/fln_beauty_notify_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                tools:text="This is title" />
-
-            <TextView
-                android:id="@+id/fln_beauty_notify_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/fln_beauty_notify_btn_bg"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingTop="4dp"
-                android:paddingEnd="16dp"
-                android:paddingBottom="4dp"
-                android:textColor="#FFFFFF"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                tools:text="This is button" />
-        </LinearLayout>
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:textColor="#494B77"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            tools:text="This is titleThis is titleThis is titleThis is titleThis is title" />
+        <TextView
+            android:id="@+id/fln_beauty_notify_btn"
+            android:layout_width="60dp"
+            android:layout_height="24dp"
+            android:background="@drawable/fish_nf_button2"
+            android:layout_marginRight="7dp"
+            android:textColor="#FFFFFF"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            tools:text="claim" />
     </LinearLayout>
 </FrameLayout>
